Concept of level has been integrated
The level structure (a draft) has been integrated into the system and can be passed from the main routine to the director. When a level is passed, the director starts it. Some components are still missing like the intro and the backgrounds

--- a/data/linkino_config.json
+++ b/data/linkino_config.json
@@ -6,7 +6,7 @@
 	"window":{
 		"width":720,
 		"height":480,
-		"fullscreen":true
+		"fullscreen":false
 	},
 	"geometry":{
 		"width":720,
@@ -28,6 +28,9 @@
 	},{
 		"font":"bobcaygr_font",
 		"size":15
+	},{
+		"font":"dotty_font",
+		"size":60
 	}],
 	"ui":{
 		"field":{
