Now the target of the packet is visible
Is it possible to see the target of the packet while the packet is traveling. This could be really interesting in order to detect problems

--- a/data/linkino_config.json
+++ b/data/linkino_config.json
@@ -6,7 +6,7 @@
 	"window":{
 		"width":720,
 		"height":480,
-		"fullscreen":true
+		"fullscreen":false
 	},
 	"geometry":{
 		"width":720,
@@ -31,6 +31,9 @@
 	},{
 		"font":"dotty_font",
 		"size":60
+	},{
+		"font":"bobcaygr_font",
+		"size":15
 	}],
 	"ui":{
 		"field":{
